--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -28,10 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="quienes_somos.html">Quienes somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
@@ -51,18 +54,21 @@
 
         <section class="heroSection">
             <form class="login-container" id="loginForm" novalidate>
-            <center><h2 class="titleTopSection">Iniciar sesión</h2></center>
-                
+                <center>
+                    <h2 class="titleTopSection">Iniciar sesión</h2>
+                </center>
+
                 <div class="mb-3">
-                <label for="email" class="form-label">Correo electrónico</label>
-                <input type="email" id="email" name="email" placeholder="Ej: juanperez@email.com"  required>
-                <span class="error" id="emailError"></span>
+                    <label for="email" class="form-label">Correo electrónico</label>
+                    <input type="email" id="email" name="email" placeholder="Ej: juanperez@email.com" required>
+                    <span class="error" id="emailError"></span>
                 </div>
 
                 <div class="mb-3">
-                <label for="password" class="form-label">Contraseña</label>
-                <input type="password" id="password" name="password" placeholder="*********" required minlength="6" maxlength="20">
-                <span class="error" id="passwordError"></span>
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" id="password" name="password" placeholder="*********" required minlength="6"
+                        maxlength="20">
+                    <span class="error" id="passwordError"></span>
                 </div>
 
                 <button type="submit">Iniciar sesión</button>
@@ -79,8 +85,8 @@
     </footer>
 
     <script>
-        document.getElementById('loginForm').addEventListener('submit', function(event){
-    event.preventDefault();
+        document.getElementById('loginForm').addEventListener('submit', function (event) {
+            event.preventDefault();
 
             let valid = true;
             const email = document.getElementById('email').value;
@@ -95,7 +101,7 @@
                 mesaggeElement.textContent = 'Login exitoso!';
                 mesaggeElement.style.color = 'green';
 
-                window.location.href = '/index.html';
+                window.location.href = '../index.html';
             }
             else {
                 mesaggeElement.textContent = 'Usuario o contraseña incorrectos.';
