--- a/Frontend/registro.html
+++ b/Frontend/registro.html
@@ -32,10 +32,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="quienes_somos.html">Quienes somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
@@ -53,27 +56,27 @@
 
         <!-- Formulario de contacto -->
 
-            <form action="/enviar-registro" method="POST" id="form-registro" class="login-container">
-                <div class="mb-3">
-                    <center><h2 class="titleTopSection">Registro</h2></center>
-                    <label for="nombre" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ej: Juan Pérez"
-                        required>
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Correo electrónico</label>
-                    <input type="email" class="form-control" id="email" name="email"
-                        placeholder="Ej: juanperez@email.com" required>
-                </div>
-                <div class="mb-3">
-                    <label for="clave" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="clave" name="clave" placeholder="*********"
-                        required>
-                </div>
+        <form action="/enviar-registro" method="POST" id="form-registro" class="login-container">
+            <div class="mb-3">
+                <center>
+                    <h2 class="titleTopSection">Registro</h2>
+                </center>
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ej: Juan Pérez" required>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Ej: juanperez@email.com"
+                    required>
+            </div>
+            <div class="mb-3">
+                <label for="clave" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="clave" name="clave" placeholder="*********" required>
+            </div>
 
-                <button type="submit" class="btn btn-primary">Registrar</button>
-            </form>
-            <p id="errores" style="color: red;"></p>
+            <button type="submit" class="btn btn-primary">Registrar</button>
+        </form>
+        <p id="errores" style="color: red;"></p>
 
 
     </main>
