--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href=".. /index.html">Inicio</a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./Frontend/servicios.html">Servicios</a>
             </li>
 
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./Frontend/quienes_somos.html">Quienes somos</a>
+          </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./Frontend/contacto.html">Contacto</a>
             </li>
